modified updatebybookid